plugins {
    id 'java'
}

group 'bartosan'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.4'
    compile group: 'org.jocl', name: 'jocl', version: '2.0.1'
}
